Fix contrast in selectable list
*ahem* So much for my "fixing" the color scheme

--- a/less/app.less
+++ b/less/app.less
@@ -117,11 +117,11 @@ tr.selectable {
 
 tr.selectable:hover {
   background-color: #88e4f9;
-  color: white;
+  color: black;
 }
 tr.selected {
   background-color: #42b5d8 !important;
-  color: white;
+  color: white !important;
 }
 
 tr.selectable > td > *.selected {
